2006-01-21 Perry
 PATCH: [ 1407740 ] Polish translation update (for version 2.4.4.0)
  Submitted by dr_prozac
  (Perry merging many of these to cvs trunk)
   Src/Language/Polish: MergePolish.rc

2006-01-20 Kimmo
 BUG: [ 1408587 ] Unused DoScroll() function in Merge*View
  Remove DoScroll() from CMergeEditView and CMergeDiffDetailView
  Src: MergeDiffDetailView.cpp MergeDiffDetailView.h MergeEditView.cpp
   MergeEditView.h

2006-01-17 Kimmo
 PATCH: [ 1406207 ] Fix error message for unique folders
  Src: DirView.cpp Merge.rc resource.h
  Src/Language: */Merge*.rc

2006-01-17 Perry
 PATCH: [ 1401711 ] A hybrid of word diff and char diff
 Submitted by Takashi Sawanaka
  Src: MergeDocLineDiffs.cpp PropEditor.cpp
   stringdiffs.cpp stringdiffs.h

2006-01-16 Kimmo
 PATCH: [ 1406203 ] Open unique files to external editor
  Src: DirView.cpp Merge.rc resource.h
  Src/Language: */Merge*.rc

2006-01-15 Perry
 PATCH: [ 1333600 ] Get rid of global MainFrame pointer (part1)
  Src: DirActions.cpp DirDoc.cpp DirView.cpp FileActionScript.cpp
   MainFrm.cpp MainFrm.h Merge.cpp MergeDoc.cpp MergeEditView.cpp
   OpenDlg.cpp PropRegistry.cpp
  Src\Common: PreferencesDlg.cpp

2006-01-14 Perry
 PATCH: [ 1403457 ] Support Unicode file filter files
  Src: FileFilterMgr.cpp

2006-01-14 Kimmo
 PATCH: [ 1372044 ] Add FileActionScript for folder compare actions
  Src: DirActions.cpp DirView.h Merge.dsp
  Src new files: FileActionScript.cpp FileActionScript.h
 PATCH: [ 1385672 ] Replace some 'file's with 'item's
  Src: Merge.rc
  Src/Language: */Merge*.rc
 PATCH: [ 1405340 ] Add XP shadow to folderskip.ico
  Submitted by Tim
  Src/res: folderskip.ico

2006-01-14 Perry
 TODO: [ 1395638 ] CChildFrame::PreCreateWindow() does nothing
  Src: ChildFrm.cpp ChildFrm.h MainFrm.cpp

2006-01-13 Perry
 PATCH: [ 1403454 ] Add comment to UniStdioFile.h
 (Cosmetic)
  Src/Common: UniFile.h
 PATCH: [ 1403893 ] Fix whitespace error in ByteCompare
 BUG: [ 1400779 ] Whitespace bug in ByteComparator